# keywordsai_eval

./: .gitignore  README.md  pyproject.toml  requirements.txt
keywordsai_eval/: settings.py  utils.py
keywordsai_eval/backends/base/: main.py
keywordsai_eval/backends/redis_stack/: __init__.py  category_prompts.json  main.py  redis_ops.py  topic_prompts.json
tests/: reset_embeddings.py  sanitiy_test.py  test_predict.py
