[tool.poetry]
name = "keywordsai-eval"
version = "0.1.0"
description = "An evaluation package for LLM input output"
authors = ["Keywords AI Team <team@keywordsai.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "5.0.8"
numpy = "1.26.4"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
attrs = "24.2.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
distro = "1.9.0"
filelock = "3.16.0"
frozenlist = "1.4.1"
fsspec = "2024.9.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
huggingface-hub = "0.24.6"
idna = "3.8"
importlib-metadata = "8.4.0"
iniconfig = "2.0.0"
jinja2 = "3.1.4"
jiter = "0.5.0"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
keywordsai = "0.1.5"
langchain = "0.2.16"
langchain-core = "0.2.38"
langchain-text-splitters = "0.2.4"
langsmith = "0.1.116"
litellm = "1.44.22"
markupsafe = "2.1.5"
multidict = "6.0.5"
openai = "1.44.0"
orjson = "3.10.7"
packaging = "24.1"
pluggy = "1.5.0"
pydantic = "2.9.0"
pydantic-core = "2.23.2"
pytest = "8.3.2"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
referencing = "0.35.1"
regex = "2024.7.24"
requests = "2.32.3"
rpds-py = "0.20.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.34"
tenacity = "8.5.0"
tiktoken = "0.7.0"
tokenizers = "0.20.0"
tqdm = "4.66.5"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
yarl = "1.10.0"
zipp = "3.20.1"
munch = "^4.0.0"

[tool.poetry.group.dev.dependencies]
keywordsai = "^0.1.5"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
